--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.8.0",
     "express-session": "^1.7.2",
     "jade": "^1.5.0",
+    "lodash": "^4.0.0",
     "method-override": "^2.1.2",
     "morgan": "^1.2.2",
     "multer": "^0.1.3",
